Update and rename 12-todo-list.html to myTodoList.html

--- a/myTodoList.html
+++ b/myTodoList.html
@@ -19,7 +19,7 @@
 
     <div class="js-todo-list todo-grid"></div>
 
-    <script src="scripts/12-todo-list.js"></script>
+    <script src="scripts/myTodoList.js"></script>
   </body>
 </html>
 
