--- a/myTodoList.html
+++ b/myTodoList.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="styles/12-todo-list.css">
+    <link rel="stylesheet" href="styles/myTodoList.css">
   </head>
   <body>
     <p>Todo List</p>
