--- a/myRockPaperScissors.html
+++ b/myRockPaperScissors.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="styles/myRockPaperScissors.css">
+    <link rel="stylesheet" href="myRockPaperScissors.css">
   </head>
 
   <body>
@@ -29,7 +29,7 @@
 
     <button class="auto-play-button js-auto-play-button">Auto Play</button>
     
-    <script src="scripts/myRockPaperScissors.js"></script>
+    <script src="myRockPaperScissors.js"></script>
   </body>
 </html>
 
