--- a/mySimpleCalculator.html
+++ b/mySimpleCalculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles/mySimpleCalculator.css">
+    <link rel="stylesheet" href="mySimpleCalculator.css">
   </head>
   <body>
     <p class="js-calculation calculation"></p>
@@ -87,6 +87,6 @@
       ">Clear</button>
     </p>
 
-    <script src="js/mySimpleCalculator.js"></script>
+    <script src="mySimpleCalculator.js"></script>
   </body>
 </html>
