--- a/myRockPaperScissors.html
+++ b/myRockPaperScissors.html
@@ -27,6 +27,15 @@
 
     <button class="reset-score-button js-reset-button">Reset Score</button>
 
+    <p>Supported keys:</p>
+    <ul>
+      <li>R (Rock)</li>
+      <li>P (Paper)</li>
+      <li>S (Scissors)</li>
+      <li>Backspace (Reset Score)</li>
+      <li>A (Auto Play)</li>
+    </ul>
+
     <button class="auto-play-button js-auto-play-button">Auto Play</button>
     
     <script src="myRockPaperScissors.js"></script>
