--- a/myRockPaperScissors.html
+++ b/myRockPaperScissors.html
@@ -3,43 +3,52 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="myRockPaperScissors.css">
+    <link rel="stylesheet" href="styles/12-rock-paper-scissors.css">
   </head>
 
   <body>
-    <p class="title">Rock Paper Scissors</p>
+    <div class="container">
+      <div class="title-row">
+        <p class="title">Rock Paper Scissors</p>
+      </div>
 
-    <button class="move-button js-rock-button">
-      <img class="move-icon" src="rock-emoji.png">
-    </button>
+      <div class="button-row">
+        <button class="move-button js-rock-button">
+          <img class="move-icon" src="images/rock-emoji.png">
+        </button>
 
-    <button class="move-button js-paper-button">
-      <img class="move-icon" src="paper-emoji.png">
-    </button>
+        <button class="move-button js-paper-button">
+          <img class="move-icon" src="images/paper-emoji.png">
+        </button>
 
-    <button class="move-button js-scissors-button">
-      <img class="move-icon" src="scissors-emoji.png">
-    </button>
+        <button class="move-button js-scissors-button">
+          <img class="move-icon" src="images/scissors-emoji.png">
+        </button>
+      </div>
 
-    <p class="js-result result"></p>
-    <p class="js-moves"></p>
-    <p class="js-score score"></p>
+      <div class="scoreboard-row">
+        <p class="js-result result"></p>
+        <p class="js-moves"></p>
+        <p class="js-score score"></p>
+      </div>
 
-    <button class="reset-score-button js-reset-button">Reset Score</button>
-    <button class="auto-play-button js-auto-play-button">Auto Play</button>
+      <div class="action-button-row">
+        <button class="reset-score-button js-reset-button">Reset Score</button>
+        <button class="auto-play-button js-auto-play-button">Auto Play</button>
+      </div>
 
-    <p>Supported keys:</p>
-    <ul>
-      <li>R (Rock)</li>
-      <li>P (Paper)</li>
-      <li>S (Scissors)</li>
-      <li>Backspace (Reset Score)</li>
-      <li>A (Auto Play)</li>
-    </ul>
+      <div class="instructions-row">
+        <p>Supported keys:</p>
+        <ul>
+          <li>R (Rock)</li>
+          <li>P (Paper)</li>
+          <li>S (Scissors)</li>
+          <li>Backspace (Reset Score)</li>
+          <li>A (Auto Play)</li>
+        </ul>
+      </div>
+    </div>
     
-    <script src="myRockPaperScissors.js"></script>
+    <script src="scripts/12-rock-paper-scissors.js"></script>
   </body>
 </html>
-
-
-
