--- a/myRockPaperScissors.html
+++ b/myRockPaperScissors.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="styles/12-rock-paper-scissors.css">
+    <link rel="stylesheet" href="myRockPaperScissors.css">
   </head>
 
   <body>
@@ -14,15 +14,15 @@
 
       <div class="button-row">
         <button class="move-button js-rock-button">
-          <img class="move-icon" src="images/rock-emoji.png">
+          <img class="move-icon" src="rock-emoji.png">
         </button>
 
         <button class="move-button js-paper-button">
-          <img class="move-icon" src="images/paper-emoji.png">
+          <img class="move-icon" src="paper-emoji.png">
         </button>
 
         <button class="move-button js-scissors-button">
-          <img class="move-icon" src="images/scissors-emoji.png">
+          <img class="move-icon" src="scissors-emoji.png">
         </button>
       </div>
 
@@ -49,6 +49,6 @@
       </div>
     </div>
     
-    <script src="scripts/12-rock-paper-scissors.js"></script>
+    <script src="myRockPaperScissors.js"></script>
   </body>
 </html>
