--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-    <link rel="stylesheet" href="myRockPaperScissors.css">
+    <link rel="stylesheet" href="styles/myRockPaperScissors.css">
   </head>
 
   <body>
@@ -49,6 +49,6 @@
       </div>
     </div>
     
-    <script src="myRockPaperScissors.js"></script>
+    <script src="scripts/myRockPaperScissors.js"></script>
   </body>
 </html>
