--- a/to-do-list/myTodoList.html
+++ b/to-do-list/myTodoList.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="myTodoList.css">
+    <link rel="stylesheet" href="styles/myTodoList.css">
   </head>
   <body>
     <p>Todo List</p>
@@ -19,7 +19,7 @@
 
     <div class="js-todo-list todo-grid"></div>
 
-    <script src="myTodoList.js"></script>
+    <script src="scripts/myTodoList.js"></script>
   </body>
 </html>
 
