--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -14,15 +14,15 @@
 
       <div class="button-row">
         <button class="move-button js-rock-button">
-          <img class="move-icon" src="rock-emoji.png">
+          <img class="move-icon" src="images/rock-emoji.png">
         </button>
 
         <button class="move-button js-paper-button">
-          <img class="move-icon" src="paper-emoji.png">
+          <img class="move-icon" src="images/paper-emoji.png">
         </button>
 
         <button class="move-button js-scissors-button">
-          <img class="move-icon" src="scissors-emoji.png">
+          <img class="move-icon" src="images/scissors-emoji.png">
         </button>
       </div>
 
