Create buttons for light and dark mode

--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -37,6 +37,11 @@
         <button class="auto-play-button js-auto-play-button">Auto Play</button>
       </div>
 
+      <div class="theme-button-row">
+        <button class="theme-button js-dark-mode-button">Dark Mode</button>
+        <button class="theme-button js-light-mode-button">Light Mode</button>
+      </div>
+
       <div class="instructions-row">
         <p>Supported keys:</p>
         <ul>
