--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/myRockPaperScissors.css">
   </head>
 
-  <body>
+  <body data-theme="dark-mode">
     <div class="container">
       <div class="title-row">
         <p class="title">Rock Paper Scissors</p>
