Update code for light and dark modes

--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -38,8 +38,7 @@
       </div>
 
       <div class="theme-button-row">
-        <button class="theme-button js-dark-mode-button">Dark Mode</button>
-        <button class="theme-button js-light-mode-button">Light Mode</button>
+        <button class="theme-button js-toggle-theme-button"></button>
       </div>
 
       <div class="instructions-row">
