Update toggle button to work with a key

--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -49,6 +49,7 @@
           <li>S (Scissors)</li>
           <li>Backspace (Reset Score)</li>
           <li>A (Auto Play)</li>
+          <li>T (Switch Theme)</li>
         </ul>
       </div>
     </div>
