--- a/rock-paper-scissors/myRockPaperScissors.html
+++ b/rock-paper-scissors/myRockPaperScissors.html
@@ -7,50 +7,52 @@
   </head>
 
   <body data-theme="dark-mode">
-    <div class="container">
-      <div class="title-row">
-        <p class="title">Rock Paper Scissors</p>
-      </div>
-
-      <div class="button-row">
-        <button class="move-button js-rock-button">
-          <img class="move-icon" src="images/rock-emoji.png">
-        </button>
-
-        <button class="move-button js-paper-button">
-          <img class="move-icon" src="images/paper-emoji.png">
-        </button>
-
-        <button class="move-button js-scissors-button">
-          <img class="move-icon" src="images/scissors-emoji.png">
-        </button>
-      </div>
-
-      <div class="scoreboard-row">
-        <p class="js-result result"></p>
-        <p class="js-moves"></p>
-        <p class="js-score score"></p>
-      </div>
-
-      <div class="action-button-row">
-        <button class="reset-score-button js-reset-button">Reset Score</button>
-        <button class="auto-play-button js-auto-play-button">Auto Play</button>
-      </div>
-
-      <div class="theme-button-row">
-        <button class="theme-button js-toggle-theme-button"></button>
-      </div>
-
-      <div class="instructions-row">
-        <p>Supported keys:</p>
-        <ul>
-          <li>R (Rock)</li>
-          <li>P (Paper)</li>
-          <li>S (Scissors)</li>
-          <li>Backspace (Reset Score)</li>
-          <li>A (Auto Play)</li>
-          <li>T (Switch Theme)</li>
-        </ul>
+    <div class="content-container">
+      <div class="container">
+        <div class="title-row">
+          <p class="title">Rock Paper Scissors</p>
+        </div>
+  
+        <div class="button-row">
+          <button class="move-button js-rock-button">
+            <img class="move-icon" src="images/rock-emoji.png">
+          </button>
+  
+          <button class="move-button js-paper-button">
+            <img class="move-icon" src="images/paper-emoji.png">
+          </button>
+  
+          <button class="move-button js-scissors-button">
+            <img class="move-icon" src="images/scissors-emoji.png">
+          </button>
+        </div>
+  
+        <div class="scoreboard-row">
+          <p class="js-result result"></p>
+          <p class="js-moves"></p>
+          <p class="js-score score"></p>
+        </div>
+  
+        <div class="action-button-row">
+          <button class="reset-score-button js-reset-button">Reset Score</button>
+          <button class="auto-play-button js-auto-play-button">Auto Play</button>
+        </div>
+  
+        <div class="theme-button-row">
+          <button class="theme-button js-toggle-theme-button"></button>
+        </div>
+  
+        <div class="instructions-row">
+          <p>Supported keys:</p>
+          <ul>
+            <li>R (Rock)</li>
+            <li>P (Paper)</li>
+            <li>S (Scissors)</li>
+            <li>Backspace (Reset Score)</li>
+            <li>A (Auto Play)</li>
+            <li>T (Switch Theme)</li>
+          </ul>
+        </div>
       </div>
     </div>
     
