--- a/calculator/mySimpleCalculator.html
+++ b/calculator/mySimpleCalculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles/mySimpleCalculator.css">
   </head>
   <body>
