--- a/to-do-list/myTodoList.html
+++ b/to-do-list/myTodoList.html
@@ -2,14 +2,14 @@
 
 <html>
   <head>
-    <title>Todo List</title>
+    <title>To-do List</title>
     <link rel="stylesheet" href="styles/myTodoList.css">
   </head>
   <body>
-    <p>Todo List</p>
+    <p>To-do List</p>
 
     <div class="todo-input-grid">
-      <input class="js-name-input name-input" placeholder="Todo name">
+      <input class="js-name-input name-input" placeholder="To-do name">
       
       <input type="date"
         class="js-due-date-input due-date-input">
