Add html to chess.html

--- a/chess/chess.html
+++ b/chess/chess.html
@@ -2,6 +2,19 @@
 <html>
   <head>
     <title>Chess</title>
+    <link rel="stylesheet" href="styles/chess.css">
   </head>
-  <body></body>
+  <body>
+    <div id="gameboard">
+      <div class="square beige">
+        <img src="" alt="King piece" id="king" class="chess-piece" draggable="true">  
+      </div>
+      <div class="square brown"></div>
+      <div class="square beige"></div>
+    </div>
+
+    <p id="info"></p>
+
+    <script src="scripts/chess,js"></script>
+  </body>
 </html>
