--- a/chess/chess.html
+++ b/chess/chess.html
@@ -15,6 +15,6 @@
 
     <p id="info"></p>
 
-    <script src="scripts/chess,js"></script>
+    <script src="scripts/chess.js"></script>
   </body>
 </html>
